--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.6.0
+backports.zoneinfo==0.2.1
 Django==4.1.6
+django-bootstrap5==23.3
+djangorestframework==3.14.0
 Pillow==9.4.0
 psycopg2==2.9.5
+pytz==2023.3
 sqlparse==0.4.3
 tzdata==2022.7
