--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-asgiref==3.6.0
-backports.zoneinfo==0.2.1
-Django==4.1.6
+asgiref==3.7.2
+Django==4.2.5
 django-bootstrap5==23.3
 djangorestframework==3.14.0
-Pillow==9.4.0
-psycopg2==2.9.5
-pytz==2023.3
-sqlparse==0.4.3
-tzdata==2022.7
+Pillow==10.0.0
+psycopg2==2.9.7
+pytz==2023.3.post1
+sqlparse==0.4.4
+tzdata==2023.3
