--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 Django==4.2.5
 django-bootstrap5==23.3
+django-debug-toolbar==4.2.0
 djangorestframework==3.14.0
 Pillow==10.0.0
 psycopg2==2.9.7
