--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ django-bootstrap5==23.3
 django-debug-toolbar==4.2.0
 djangorestframework==3.14.0
 Pillow==10.0.0
-psycopg2==2.9.7
+psycopg==3.1.16
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.3
